* config/darwin.h (APPLE_CC): Remove, not meaningful in FSF GCC.         (STRINGIFY_THIS, REALLY_STRINGIFY): Remove.         (CPP_SPEC): Remove insertion of APPLE_CC definition.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55222 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-03  Stan Shebs  <shebs@apple.com>
+
+	* config/darwin.h (APPLE_CC): Remove, not meaningful in FSF GCC.
+	(STRINGIFY_THIS, REALLY_STRINGIFY): Remove.
+	(CPP_SPEC): Remove insertion of APPLE_CC definition.
+
 2002-07-03  Roger Sayle  <roger@eyesopen.com>
 
 	* combine.c (struct_undo): Change types of recorded substitutions
