--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,12 @@
+2002-07-03  Phil Edwards  <pme@gcc.gnu.org>
+
+	PR libstdc++/7173
+	* acinclude.m4:  Simplify determination of gcc_version, and move
+	up to GLIBCPP_CONFIGURE.
+	* configure.in (release_VERSION):  Really remove.
+	(AM_INIT_AUTOMAKE, AM_CONFIG_HEADER):  Move after GLIBCPP_CONFIGURE.
+	* aclocal.m4, configure:  Regenerate.
+
 2002-07-02  Phil Edwards  <pme@gcc.gnu.org>
 
 	* docs/html/configopts.html, docs/html/install.html:  Tweaks.
