--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-03  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.md (prologue_get_pc): Issue pop here ...
+	* config/i386/i386.c (load_pic_register): ... not here.
+
 2002-07-03  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.md (fix_truncdfsi2_internal): Ignore DImode
