--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,14 @@
+2002-07-03  Steev Wilcox  <steev@paradigmds.com>
+	 
+	PR libstdc++/7057
+	* include/ext/stl_hashtable.h: Fix.
+	* testsuite/ext/hash_map.cc: New.
+
+2002-07-03  Benjamin Kosnik  <bkoz@redhat.com>
+
+        PR libstdc++/7097
+        * include/c/std_cwchar.h: Fix.
+
 2002-07-03  Jack Reeves  <jackw_reeves@hotmail.com>
             Kenny Simpson  <theonetruekenny@yahoo.com>
             Phil Edwards  <pme@gcc.gnu.org>
