--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul  4 07:36:48 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* gcc.c-torture/compile/simd-3.c: New test.
+
 2002-07-03  Chris Demetriou  <cgd@broadcom.com>
 
 	* g++.dg/abi/mangle6.C: Run for mipsisa64*-*-* targets.
