* ltcf-cxx.sh (hpux*): Modify to support ia64-*-hpux*.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55250 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-04  Steve Ellcey  <sje@cup.hp.com>
+	
+	* ltcf-cxx.sh (hpux*): Modify to support ia64-*-hpux*.
+
 2002-07-03  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure.in: Make --without-x work.
