--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-05  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* c-parse.in (extdef): Append ';'.
+	(old_style_parm_decls): Append ';'.
+
 2002-07-04  Daniel Jacobowitz  <drow@mvista.com>
 
 	* configure.in: Correct typos: gcc_cv_as_gdwarf2_debug_flag to
