--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-05  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* gcc/gcc.c (asm_debug): Move initialization ...
+	(init_spec): ... here.
+
 2002-07-05  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* c-parse.in (extdef): Append ';'.
