--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-05  Jason Merrill  <jason@redhat.com>
+
+	PR optimization/7145
+	* tree.c (cp_copy_res_decl_for_inlining): Also copy DECL_INITIAL.
+
 2002-07-05  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Repair damage on weak-impared targets caused by my previous patch.
@@ -555,6 +560,7 @@
 
 2002-05-18  Jason Merrill  <jason@redhat.com>
 
+	PR c++/6611
 	* decl2.c (import_export_decl): If we clear
 	DECL_NOT_REALLY_EXTERN, make sure DECL_EXTERNAL is set.
 
