re PR rtl-optimization/7145 (g++ -O with structure initializer & return value optimization generates bad code)
        PR optimization/7145
        * tree.c (cp_copy_res_decl_for_inlining): Also copy DECL_INITIAL.

[[Split portion of a mixed commit.]]

From-SVN: r55262.1

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-05  Jason Merrill  <jason@redhat.com>
+
+	PR optimization/7145
+	* tree.c (cp_copy_res_decl_for_inlining): Also copy DECL_INITIAL.
+
 2002-05-18  Jason Merrill  <jason@redhat.com>
 
 	PR c++/6611
