PR c++/6706 	* dwarfout.c (output_reg_number): Fix warning message. 	(output_bound_representation): Check SAVE_EXPR_RTL is not NULL 	before using it.
	PR c++/6706
	* g++.dg/debug/debug6.C: New test.
	* g++.dg/debug/debug7.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55264 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-07-03  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/6706
+	* dwarfout.c (output_reg_number): Fix warning message.
+	(output_bound_representation): Check SAVE_EXPR_RTL is not NULL
+	before using it.
+	
 2002-07-05  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* gcc/gcc.c (asm_debug): Move initialization ...
