--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-03  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/6706
+	* g++.dg/debug/debug6.C: New test.
+	* g++.dg/debug/debug7.C: New test.
+
 Thu Jul  4 07:36:48 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* gcc.c-torture/compile/simd-3.c: New test.
