--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-05  Jim Wilson  <wilson@redhat.com>
+
+	* decl.c (mark_named_label_lists): Add missing & in call to
+	mark_binding_level.
+
 2002-07-05  Jason Merrill  <jason@redhat.com>
 
 	PR optimization/7145
