m68hc11.md ("*ashlsi3"): Avoid saving y if we know it is dead.
	* config/m68hc11/m68hc11.md ("*ashlsi3"): Avoid saving y if we know
	it is dead.
	("*ashrsi3"): Likewise.
	("*lshrsi3"): Likewise.

From-SVN: r55270

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,9 +1,16 @@
+2002-07-05  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* config/m68hc11/m68hc11.md ("*ashlsi3"): Avoid saving y if we know
+	it is dead.
+	("*ashrsi3"): Likewise.
+	("*lshrsi3"): Likewise.
+
 2002-07-05  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* genautomata.c (output_max_insn_queue_index_def): Take latencies
 	into account.
 
-2002-07-06  Stephane Carrez  <stcarrez@nerim.fr>
+2002-07-05  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* config/m68hc11/m68hc11.md (peephole2): New peephole2 to optimize
 	address computation and memory moves.
