m68hc11.md ("*movqi_68hc12"): Avoid allocating QI mode registers in soft registers.
	* config/m68hc11/m68hc11.md ("*movqi_68hc12"): Avoid allocating
	QI mode registers in soft registers.
	("zero_extendqihi2"): Do not take into account soft registers
	for register allocation (use '*' constraint).

From-SVN: r55274

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-07-05  Stephane Carrez  <stcarrez@nerim.fr>
 
+	* config/m68hc11/m68hc11.md ("*movqi_68hc12"): Avoid allocating
+	QI mode registers in soft registers.
+	("zero_extendqihi2"): Do not take into account soft registers 
+	for register allocation (use '*' constraint).
+
+2002-07-05  Stephane Carrez  <stcarrez@nerim.fr>
+
 	* config/m68hc11/m68hc11.md ("*ashlsi3"): Avoid saving y if we know
 	it is dead.
 	("*ashrsi3"): Likewise.
