--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -1019,9 +1019,9 @@
 
 (define_insn "*movqi_68hc12"
   [(set (match_operand:QI 0 "nonimmediate_operand" 
-				"=U,d*AU*q,d*A*qU,*u,d*A*q,m,m")
+				"=U,d*AU*q,d*A*qU,d*A*q,m,?*u,m")
 	(match_operand:QI 1 "general_operand" 
-				"U,*ri*q,U,*ri*qU,m,d*q,!*A"))]
+				"U,*ri*q,U,m,d*q,*ri*qU,!*A"))]
   "TARGET_M6812"
   "*
 {
@@ -1348,7 +1348,7 @@
 ")
 
 (define_insn "zero_extendqihi2"
-  [(set (match_operand:HI 0 "non_push_operand" "=dm,d,*A,!u,d,m,!u")
+  [(set (match_operand:HI 0 "non_push_operand" "=dm,d,*A,!*u,d,m,!*u")
 	(zero_extend:HI 
 	    (match_operand:QI 1 "nonimmediate_operand" "d,*A,d*Am,d,!um,*A,*A")))]
   ""
