--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-05  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	PR c++/7099
+        * g++.dg/warn/noreturn1.C: New test.
+
 2002-07-03  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/6706
